--- a/avaliacao-abordagem.html
+++ b/avaliacao-abordagem.html
@@ -19,7 +19,7 @@
         <img id="barrosinhoOn" src="img/barrosinho.png" alt="">
     </div>
     <div class="header">
-        <img src="img/header.png" alt="">
+        <img src="img/curso-abordagem.png" alt="">
     </div>
     <div class="profile">
         <div id="perfil">?</div>
@@ -39,5 +39,5 @@
         Retornar ao Topo.</button>
 </body>
 </html>
-<script src="modulacaojavascript.js"></script>
+<script src="abordagemjavascript.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
