--- a/avaliacao-abordagem.html
+++ b/avaliacao-abordagem.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="https://cdn.discordapp.com/attachments/1127720158555807854/1134996805239722106/logotipo.png" type="image/x-icon">
     <title>Atividade do Curso de Modulação | SESEG - REPÚBLICA</title>
 </head>
-<body style="display: none;">
+<body>
     <audio id="meuAudio" autoplay>
         <source src="audio/start.mp3" type="audio/mpeg">
         Seu navegador não suporta áudio HTML5.
